--- a/hwp_config.yaml
+++ b/hwp_config.yaml
@@ -33,4 +33,4 @@ ref_edges: 2
 # range of reference slot finding
 ref_range: 0.25
 # output g3 file path + name
-output: './output.g3'
+output: '../output.g3'
