--- a/hwp_config.yaml
+++ b/hwp_config.yaml
@@ -31,6 +31,6 @@ num_edges: 1140
 # Reference slot width　
 ref_edges: 2
 # range of reference slot finding
-ref_range: 0.25
+ref_range: 0.1
 # output g3 file path + name
-output: '../output.g3'
+output: './output.g3'
